@@ -1,6 +1,7 @@
 >> 01.01.2012
 [CO]
 - Show the user a native filename within the GUI
+- Beside "Scene" and "Script", "PLViewer" is now also able to load in "Mesh", "Material" and "Image" (= texture)
 PLViewerQt:
 - Redraw & ping the frontend so the GUI stays kind-of responsive while loading, but disable the Qt main window while loading so the user can't prank around within
   the GUI
